# sparsamp-semantic

./: .gitignore  CLAUDE.md  IDEA_REPORT.md  LICENSE  README.md  RESEARCH_BRIEF.md  SECURITY.md  pyproject.toml
configs/: qwen15_completion_pilot.json  qwen15_entropy_rescue_512.json  qwen15_entropy_rescue_v2_512.json  qwen15_fh_pilot.json  qwen15_finishing_smoke.json  qwen15_fixed_length_matched_cover.json  qwen15_fixed_length_rrc_smoke.json  qwen15_long_payload_256.json  qwen15_long_payload_512.json  qwen15_rrc_semantic_pilot.json  qwen15_rrc_smoke.json  qwen15_smoke_grid.json  qwen15_tail_schedule_smoke.json  semantic_grid.example.json
docs/: algorithm.md  api.md  byte_sliced_r029.md  canonical_candidate_order.md  coarse_logit_contract_r032.md  entropy_rescue.md  fh_sparsamp.md  fixed_bin_mass_contract_r033.md  fixed_length_rrc.md  integer_probability_contract.md  interval_guard_r028.md  logit_quantization_r027.md  microframe_r026.md  portable_precision_context.md  reproducible_sampling_r041.md  rrc.md  semantic_finishing.md  support_adaptive_mass_contract.md  verified_rrc_theory.md
figures/: generate_paper_figures.py
paper/: ABSTRACT_ZH.md  AUTHOR_NOTES_ZH.md  CITATION_AUDIT.md  CLAIM_EVIDENCE_MAP.md  FIGURE_PLAN.md  MANUSCRIPT_DRAFT.md  MANUSCRIPT_INTEGRITY.json  MANUSCRIPT_INTEGRITY.md  REVIEW_AUDIT.md  STAGE25_COMPLIANCE_REPORT.json  STAGE25_INTEGRITY_REPORT.md  STAGE25_MATERIAL_PASSPORT.json  STAGE3_REVIEWER_CONFIGURATION.md  STATISTICAL_NOTES.md  SUBMISSION_CHECKLIST.md  SUPPLEMENTARY_INFORMATION.md  references.enw
refine-logs/: EXPERIMENT_PLAN.md  (+37 more)
(+184 files in other folders)
